<resources>
    <string name="app_name">TRD</string>
    <string name="enter_password_here">Enter password here</string>
    <string name="log_in">LOG IN</string>
    <string name="sign_up_here">Sign up here.</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="enter_your_e_mail_here">Enter your e-mail here</string>
    <string name="logo">Logo</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="confirm_password">Confirm password</string>
    <string name="sign_up">SIGN UP</string>
    <string name="log_in_here">Log in here.</string>
    <string name="password">Password</string>
    <string name="full_name">Full name.</string>
    <string name="e_mail">E-mail</string>
    <string name="phone_no">Phone no.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="test">TEST</string>
    <string name="search">Search</string>
    <string name="deposit">deposit</string>
    <string name="title_activity_market">market</string>
    <string name="tab_text_1">STORES</string>
    <string name="tab_text_2">CATEGORIES</string>
    <string name="stores">STORES</string>
    <string name="categories">CATEGORIES</string>
    <string name="items">ITEMS</string>
    <string name="title_activity_shop_store">shop_store</string>
    <string name="title_activity_mkt">mkt_activity</string>
    <string name="store">STORE</string>
    <string name="view_item">VIEW ITEM</string>
    <string name="todo">TODO</string>
    <string name="beverages">Beverages</string>
    <string name="soft_drinks">Soft Drinks</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
</resources>