<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/userEmail"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:autofillHints="Your e-mail goes here."
        android:background="#50000000"
        android:drawableStart="@drawable/ic_baseline_email_24"
        android:drawablePadding="10sp"
        android:ems="10"
        android:fontFamily="@font/barlow_condensed_medium"
        android:hint="@string/enter_your_e_mail_here"
        android:inputType="textEmailAddress"
        android:padding="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.433"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/userPassword"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:autofillHints="Your password goes here"

        android:background="#50000000"
        android:drawableStart="@drawable/ic_baseline_vpn_key_24"
        android:drawablePadding="10sp"
        android:fontFamily="@font/barlow_condensed_medium"
        android:hint="@string/enter_password_here"


        android:inputType="textPassword"
        android:padding="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.559"
        tools:ignore="TextContrastCheck" />

    <Button

        android:id="@+id/login_button"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/barlow_condensed_medium"

        android:padding="10sp"
        android:text="@string/log_in"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.664" />

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_button"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:fontFamily="@font/barlow_condensed_medium"
            android:gravity="end"
            android:text="@string/don_t_have_an_account"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/register_page_link"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"

            android:fontFamily="@font/barlow_condensed_medium"
            android:text="@string/sign_up_here"
            android:textColor="@color/teal_700"
            tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:contentDescription="@string/logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.12"
        app:srcCompat="@drawable/k_logo" />


</androidx.constraintlayout.widget.ConstraintLayout>