<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login"
    tools:context=".Reg_activity">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:contentDescription="@string/logo"
            android:src="@drawable/k_logo"
            />
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Register"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:fontFamily="@font/barlow_condensed_medium"
            android:textSize="30sp"
            android:gravity="center"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/activity_vertical_margin"
            android:layout_marginVertical="@dimen/activity_vertical_margin"
            android:hint="E-mail"
            app:boxBackgroundColor="#50000000"
            app:boxStrokeColor="#50000000"
            app:endIconMode="clear_text"
            app:hintTextColor="@color/ic_launcher_background"

            app:startIconDrawable="@drawable/ic_baseline_email_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/userEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/barlow_condensed_medium"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/activity_vertical_margin"
            android:layout_marginVertical="@dimen/activity_vertical_margin"
            android:hint="@string/password"
            app:boxBackgroundColor="#50000000"
            app:boxStrokeColor="#50000000"
            app:endIconMode="password_toggle"
            app:hintTextColor="@color/ic_launcher_background"
            app:startIconDrawable="@drawable/ic_baseline_vpn_key_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/userPassword"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/barlow_condensed_medium" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/activity_vertical_margin"
            android:layout_marginVertical="@dimen/activity_vertical_margin"
            android:hint="Confirm Password"
            app:boxBackgroundColor="#50000000"
            app:boxStrokeColor="#50000000"
            app:endIconMode="password_toggle"
            app:hintTextColor="@color/ic_launcher_background"
            app:startIconDrawable="@drawable/ic_baseline_info_24"

            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ConfirmPassword"
                android:layout_width="match_parent"
                android:inputType="textPassword"
                android:layout_height="wrap_content"
                android:fontFamily="@font/barlow_condensed_medium" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton

            android:id="@+id/register_button"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="@dimen/activity_vertical_margin"

            android:fontFamily="@font/barlow_condensed_medium"
            android:padding="10sp"
            android:text="@string/sign_up" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:fontFamily="@font/barlow_condensed_medium"
                android:gravity="end"

                android:text="@string/already_have_an_account"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/login_link"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/barlow_condensed_medium"
                android:text="@string/log_in_here"
                android:textColor="@color/teal_700"
                tools:ignore="TextContrastCheck" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:fontFamily="@font/barlow_condensed_medium"
                android:gravity="end"
                android:text="By registering you are agreeing to "
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:clickable="true"
                android:fontFamily="@font/barlow_condensed_medium"
                android:text="Terms &amp; Conditions"
                android:textColor="#00BCD4" />
        </LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>